--- a/blocks/profile/__btn/_add/profile__btn_add.css
+++ b/blocks/profile/__btn/_add/profile__btn_add.css
@@ -5,4 +5,20 @@
   background-image: url(../../../../images/btn-add.svg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: 16px 16px;
+}
+
+@media (530px <= width <= 768px) {
+  .profile__btn_add {
+    width: 100px;
+    height: 30px;
+    background-size: 10px 10px;
+  }
+}
+
+@media (width < 530px) {
+  .profile__btn_add {
+    width: 100%;
+    margin: 0 auto;
+  }
 }
