--- a/blocks/gallery/__item-img/gallery__item-img.css
+++ b/blocks/gallery/__item-img/gallery__item-img.css
@@ -2,3 +2,11 @@
   width: 282px;
   height: 282px;
 }
+
+@media (width <= 600px) {
+  .gallery__item-img {
+    width: 100%;
+    object-fit: cover;
+    object-position: top;
+  }
+}
