Создал футер и адаптив для него

--- a/blocks/gallery/__item-like-btn/galery__item-like-btn.css
+++ b/blocks/gallery/__item-like-btn/galery__item-like-btn.css
@@ -5,4 +5,5 @@
   background-color: #fff;
   background-image: url(./../../../images/like-btn.svg);
   background-repeat: no-repeat;
+  padding: 0;
 }
