--- a/blocks/gallery/__item-title/gallery__item-title.css
+++ b/blocks/gallery/__item-title/gallery__item-title.css
@@ -1,4 +1,5 @@
 .gallery__item-title {
+  width: 100%;
   font-size: 24px;
   font-weight: 900;
   line-height: 1.2;
@@ -9,5 +10,3 @@
   overflow: hidden;
   white-space: nowrap;
 }
-
-/* TODO доделать паддинг у сердечка и подвал */
