--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,6 +6,13 @@
   align-items: center;
 }
 
+@media (530px <= width < 900px) {
+  .profile {
+    max-width: 580px;
+    padding: 38px 10px 0;
+  }
+}
+
 @media (width < 530px) {
   .profile {
     padding: 38px 10px 0;
