--- a/blocks/popup/__btn-cls/popup__btn-cls.css
+++ b/blocks/popup/__btn-cls/popup__btn-cls.css
@@ -1,3 +1,11 @@
 .popup__btn-cls {
-  
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  top: -40px;
+  right: -40px;
+  background-image: url(../../../images/btn-cls.svg);
+  background-position: center;
+  background-color: #000;
+  border: 0;
 }
