--- a/blocks/popup/__btn-sbmt/popup__btn-sbmt.css
+++ b/blocks/popup/__btn-sbmt/popup__btn-sbmt.css
@@ -1,3 +1,10 @@
 .popup__btn-sbmt {
-  
+  height: 50px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.2;
+  background-color: #000;  
+  color: #fff;
+  border: 0;
+  border-radius: 2px;
 }
