--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,4 +5,7 @@
   width: 100%;
   height: 100%;
   background-color: rgb(0 0 0 / 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
