--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -5,3 +5,10 @@
   color: #000;
   margin: 0 0 54px;
 }
+
+@media (width <= 460px) {
+  .popup__title {
+    font-size: 18px;
+    margin: 0 0 75px;
+  }
+}
