--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,4 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  visibility: hidden;  /*так плавно открывается popup*/
+  opacity: 0; /*так плавно открывается popup*/
+  transition: visibility 0s, .2s linear; /*так плавно открывается popup*/
 }
