--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,18 @@
 .page {
-  height: 100vh;
-  background-color: #000;
+  height: 100%;
   font-family: 'Inter', 'Arial', sans-serif;
   color: #fff;
+  padding: 45px 0 0;
+}
+
+@media (900px <=width <=1024px) {
+  .page {
+    padding: 35px 0 0;
+  }
+}
+
+@media (width < 900px) {
+  .page {
+    padding: 25px 0 0;
+  }
 }
