--- a/blocks/popup/__input-data/popup__input-data.css
+++ b/blocks/popup/__input-data/popup__input-data.css
@@ -6,10 +6,12 @@
   color: #000;
   border: 0;
   border-bottom: 3px solid rgb(0 0 0 / 0.2);
+  border-radius: 0;
   margin: 0 0 30px;
   padding: 0 0 13px;
   outline: none;
   transition: border-bottom .2s linear;
+  text-align: left;
 }
 
 .popup__input-data:nth-of-type(2) {
