--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -2,19 +2,15 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 1.2;
-  margin: 16px 0 0;
-}
-
-@media (425px <= width <= 900px) {
-  .profile__subtitle {
-    font-size: 16px;
-      margin: 14px 0 0;
-  }
+  margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  grid-area: profile-description;
 }
 
 @media (width < 425px) {
   .profile__subtitle {
     font-size: 14px;
-      margin: 14px 0 0;
   }
 }
