--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -3,14 +3,10 @@
   font-weight: 500;
   line-height: 1.14;
   margin: 0;
-  display: flex;
-  align-items: baseline;
-}
-
-@media (425px <= width <= 900px) {
-  .profile__title {
-    font-size: 30px;
-  }
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  grid-area: profile-name;
 }
 
 @media (width < 425px) {
