--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,21 +1,15 @@
 .profile {
-  max-width: 880px;
   margin: 0 auto;
-  padding: 40px 10px 0;
-  display: flex;
+  padding: 40px 0 0;
+  display: grid;
+  grid-template-columns: 120px 1fr 150px;
   align-items: center;
+  gap: 30px;
 }
 
-@media (530px <= width < 900px) {
+@media (width <= 768px) {
   .profile {
-    max-width: 580px;
-    padding: 38px 10px 0;
-  }
-}
-
-@media (width < 530px) {
-  .profile {
-    padding: 38px 10px 0;
-    flex-direction: column;
+    grid-template-columns: 1fr;
+    justify-items: center;
   }
 }
