--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@
 
 /* card */
 @import url(./blocks/card/card.css);
+@import url(./blocks/card/__delete-button/card__delete-button.css);
 @import url(./blocks/card/__photo/card__photo.css);
 @import url(./blocks/card/__info-container/card__info-container.css);
 @import url(./blocks/card/__title/card__title.css);
