--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -5,6 +5,7 @@
   top: -40px;
   right: -40px;
   background-image: url(../../../images/btn-cls.svg);
+  background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
   background-color: transparent; /* прозрачный фон кнопки */
