--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -4,6 +4,7 @@
   background-image: url(../../../../images/btn-pencil.svg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: 10px 10px;
   border: 1px solid #fff;
   box-sizing: border-box;
   background-color: #000;
