Попраил иконку удалить, попробовал поправить баг с кнопка редактироваи удалить

--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -3,8 +3,8 @@
   margin: 0 0 0 auto;
   background-image: url(../../../../images/btn-add.svg);
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: 16px 16px;
+  background-position: center center;
+  background-size: 22px 22px;
   border: 1px solid #fff;
   box-sizing: border-box;
   background-color: #000;
