--- a/blocks/card/__delete-button/card__delete-button.css
+++ b/blocks/card/__delete-button/card__delete-button.css
@@ -1,15 +1,18 @@
 .card__delete-button {
-  width: 18px;
-  height: 19px;
+  width: 30px;
+  height: 30px;
   position: absolute;
   top: 20px;
   right: 20px;
   z-index: 1;
   border: none;
-  background-color: transparent;
+  background-color: rgba(198, 198, 198, 0.5);
   background-image: url(../../../images/btn-trash.svg);
   background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 18px 19px;
   cursor: pointer;
+  border-radius: 3px;
   opacity: 1;
   transition: opacity .2s linear;
 }
