--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -4,5 +4,8 @@
   padding: 50px 0 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+  /* вариант если хотим чтобы карточки не растягивались */
+  /* grid-template-columns: repeat(auto-fill, minmax(282px, 282px)); */
   gap: 17px;
+  justify-content: center;
 }
