--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -3,7 +3,7 @@
   height: 24px;
   background-image: url(../../../../images/btn-pencil.svg);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center center;
   background-size: 10px 10px;
   border: 1px solid #fff;
   box-sizing: border-box;
