--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -1,7 +1,7 @@
 .profile__button-add {
   height: 50px;
   margin: 0 0 0 auto;
-  background-image: url(../../../../images/btn-add.svg);
+  background-image: url("../../../../images/btn-add.svg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 22px 22px;
