--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -1,7 +1,7 @@
 .profile__button-edit {
   width: 24px;
   height: 24px;
-  background-image: url(../../../../images/btn-pencil.svg);
+  background-image: url("../../../../images/btn-pencil.svg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 10px 10px;
