--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -1,6 +1,6 @@
 .profile__button-add {
+  width: 150px;
   height: 50px;
-  margin: 0 0 0 auto;
   background-image: url(../../../../images/btn-add.svg);
   background-repeat: no-repeat;
   background-position: center center;
@@ -9,7 +9,7 @@
   box-sizing: border-box;
   background-color: #000;
   border-radius: 2px;
-  width: 150px;
+  margin: 0 0 0 auto;
   cursor: pointer;
   opacity: 1;
   transition: opacity .2s linear;
@@ -24,3 +24,5 @@
     width: 100%;
   }
 }
+
+/* TODO доделать кнопку добавить */
