--- a/blocks/profile/__photo/profile__photo.css
+++ b/blocks/profile/__photo/profile__photo.css
@@ -5,6 +5,8 @@
   cursor: pointer;
   opacity: 1;
   transition: opacity .2s linear;
+  text-align: center;
+  font-size: 70px;
 }
 
 .profile__photo:hover {
